# job_offer_evaluator

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  skills-lock.json
.claude/: ralph-loop.local.md  settings.json
.claude/hooks/: no-compound-commands.py
.github/workflows/: ci.yml
DATA/: user_profile.md
DOCUMENTATION/: README.md
RAPORTS/: QA-Report-2026-06-30.md  architecture_raport.md  matching_deep_research.md  matching_method_report.md  per_user_api_key_wiring_plan.md  possible_improvements.md  production_todo.md  qa2_raport.md  qa_report.md  secret_rotation_checklist.md  security_audit_report.md
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_user_profile.py  0003_ai_score.py  0004_selected_model.py  0005_users.py  0006_user_profile_user_id.py  0007_selected_model_user_id.py  0008_model_usage_user_id.py  0009_budget_user_id.py  0010_user_email_verified.py  0011_refresh_tokens.py  0012_user_api_key.py  0013_model_usage_user_created.py  0013_model_usage_user_created_index.py  0014_model_usage_estimated.py  0015_model_usage_cost.py  0016_openai_admin_key.py  0017_user_api_key_daily_limit.py  0017_user_api_key_daily_request_limit.py  0018_offer_skill_index.py  0019_offer_skill_index_meta.py  0020_unknown_skill_token.py
app/: config.py  config_validation.py
app/application/: admin_key_resolver.py  admin_key_use_cases.py  ai_scoring_context.py  api_key_resolver.py  api_key_use_cases.py  auth_use_cases.py  budget_service.py  offer_skill_index.py  ports.py  refresh_tokens.py  skill_canonicalization.py  skill_corpus.py  skill_suggestions.py  usage_pricing.py  use_cases.py
app/composition/: __init__.py  ai.py  app_factory.py  auth.py  foundation.py  offers.py  usage.py
app/domain/: api_keys.py  api_providers.py  auth.py  budget.py  entities.py  errors.py  filters.py  matching.py  password_policy.py  salary_calculator.py  scoring.py  skills.py  sorting.py
app/infrastructure/: agent_models.py  alias_map_skill_normalizer.py  api_key_budget_status_reader.py  argon2_password_hasher.py  caching_ai_scorer.py  caching_available_models_provider.py  composite_available_models_provider.py  composite_budget_status_reader.py  composite_model_usage_tracker.py  console_email_sender.py  daily_request_usage_reader.py  db.py  db_readiness.py  email_validators.py  fernet_key_cipher.py  gemini_available_models_provider.py  gemini_client.py  google_pace_limiter_cache.py  in_memory_rate_limiter.py  jwt_password_reset_token_service.py  jwt_token_service.py  jwt_verification_token_service.py  keyed_user_available_models_provider.py  llm_logging.py  (+42 more)
docs/: auth-multitenancy.md  polish-net-salary.md  skills-normalization-report.md  skills-normalization.md
frontend/: DESIGN.md  _shot.mjs  angular.json  package-lock.json  package.json
tests/: fakes.py
(+199 files in other folders)
