[project]
name = "evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "cryptography>=49.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.137.1",
    "openai-agents>=0.17.5",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.39.0",
]

[project.optional-dependencies]
# Shared rate-limiter backend for multi-worker / multi-instance deploys
# (RATE_LIMITER_BACKEND=redis). Install with: uv sync --extra redis
redis = ["redis>=5.0"]

[dependency-groups]
dev = [
    "httpx2>=2.4",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
