[project]
name = "evaluator"
version = "0.1.0"
description = "Matches scraped job offers to a user's profile and optionally scores fit with an LLM."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "cryptography>=49.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.137.1",
    "openai-agents>=0.17.5",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.39.0",
]

[project.optional-dependencies]
# Shared rate-limiter backend for multi-worker / multi-instance deploys
# (RATE_LIMITER_BACKEND=redis). Install with: uv sync --extra redis
redis = ["redis>=5.0"]

[dependency-groups]
dev = [
    "httpx2>=2.4",
    "mypy>=1.13",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
# Pin the width so `ruff format` is consistent across machines. E501 (line-too-long) is
# deliberately NOT added to the lint selection — enforcing it would churn many existing lines;
# this just fixes the formatter's target width.
line-length = 100

[tool.mypy]
python_version = "3.13"
files = ["app", "main.py"]
# Third-party SDKs (openai-agents, etc.) ship without stubs; don't fail on their missing types.
ignore_missing_imports = true
# Pragmatic baseline for a previously-unchecked codebase: type-check annotated code without
# demanding annotations everywhere. Tighten incrementally.
check_untyped_defs = true
